plot nodestats branch pairing

--- a/fig-nodestats.ipynb
+++ b/fig-nodestats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "814996a3",
    "metadata": {},
    "outputs": [],
@@ -11,44 +11,26 @@
     "import numpy as np\n",
     "import h5py\n",
     "import matplotlib.pyplot as plt\n",
-    "from topostats.io import LoadScans"
+    "from topostats.io import LoadScans\n",
+    "from topostats.plotting import Colormap\n",
+    "\n",
+    "colormap = Colormap()\n",
+    "cmap = colormap.get_cmap()\n",
+    "vmin = -3\n",
+    "vmax = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "0353dcac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Fri, 12 Sep 2025 12:14:30] [INFO    ] [topostats] Extracting image from /Users/sylvi/topo_data/topostats_2/datasets/20250528_RA_dose_0GY_picoz/output_fig_nodestats/processed/20250528_picoz_0RA_tip_0.0_00019.topostats\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m12:14:30\u001b[0m | \u001b[1mINFO\u001b[0m |\u001b[35mtopostats.py\u001b[0m:\u001b[35mtopostats\u001b[0m:\u001b[35mload_topostats\u001b[0m:\u001b[35m38\u001b[0m | \u001b[1mLoading image from : /Users/sylvi/topo_data/topostats_2/datasets/20250528_RA_dose_0GY_picoz/output_fig_nodestats/processed/20250528_picoz_0RA_tip_0.0_00019.topostats\u001b[0m\n",
-      "\u001b[34m12:14:30\u001b[0m | \u001b[1mINFO\u001b[0m |\u001b[35mtopostats.py\u001b[0m:\u001b[35mtopostats\u001b[0m:\u001b[35mload_topostats\u001b[0m:\u001b[35m47\u001b[0m | \u001b[1m[20250528_picoz_0RA_tip_0.0_00019] TopoStats file version : 2.3\u001b[0m\n",
-      "\u001b[34m12:14:30\u001b[0m | \u001b[1mINFO\u001b[0m |\u001b[35mtopostats.py\u001b[0m:\u001b[35mtopostats\u001b[0m:\u001b[35mload_topostats\u001b[0m:\u001b[35m54\u001b[0m | \u001b[1m[20250528_picoz_0RA_tip_0.0_00019] : Extracted .topostats dictionary.\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['disordered_traces', 'filename', 'grain_curvature_stats', 'grain_tensors', 'height_profiles', 'image', 'image_original', 'img_path', 'nodestats', 'ordered_traces', 'pixel_to_nm_scaling', 'splining', 'topostats_file_version'])\n",
-      "Value(False)\n",
-      "dict_keys(['images', 'stats'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "base_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/20250528_RA_dose_0GY_picoz\")\n",
     "data_dir = base_dir / \"output_fig_nodestats\"\n",
+    "figure_dir = Path(\"/Users/sylvi/topo_data/topostats_2/figures/fig-disordered-tracing\")\n",
+    "assert figure_dir.exists()\n",
     "assert data_dir.exists()\n",
     "\n",
     "image_filename = \"20250528_picoz_0RA_tip_0.0_00019\"\n",
@@ -62,8 +44,154 @@
     "\n",
     "image_dict = loadscans_dict[image_filename]\n",
     "print(image_dict.keys())\n",
+    "image = image_dict[\"image\"]\n",
+    "p2nm = image_dict[\"pixel_to_nm_scaling\"]\n",
+    "print(f\"pixel to nm scaling: {p2nm} nm/pixel\")\n",
+    "print(f\"image size: {image.shape} px, {image.shape[0]*p2nm:.2f} x {image.shape[1]*p2nm:.2f} nm\")\n",
     "image_nodestats = image_dict[\"nodestats\"][\"above\"]\n",
-    "print(image_nodestats.keys())"
+    "print(image_nodestats.keys())\n",
+    "image_nodestats_images = image_nodestats[\"images\"]\n",
+    "print(image_nodestats_images.keys())\n",
+    "image_nodestats_images_grain1 = image_nodestats_images[\"grain_1\"]\n",
+    "print(image_nodestats_images_grain1.keys())\n",
+    "image_nodestats_images_grain1_grain = image_nodestats_images_grain1[\"grain\"]\n",
+    "print(image_nodestats_images_grain1_grain.keys())\n",
+    "image_nodestats_images_grain1_grain_image = image_nodestats_images_grain1_grain[\"grain_image\"]\n",
+    "image_nodestats_images_grain1_grain_skeleton = image_nodestats_images_grain1_grain[\"grain_skeleton\"]\n",
+    "image_nodestats_images_grain1_grain_mask = image_nodestats_images_grain1_grain[\"grain_mask\"]\n",
+    "image_nodestats_stats = image_nodestats[\"stats\"]\n",
+    "image_nodestats_stats_grain1 = image_nodestats_stats[\"grain_1\"]\n",
+    "print(image_nodestats_stats_grain1.keys())\n",
+    "image_nodestats_stats_grain1_node1 = image_nodestats_stats_grain1[\"node_1\"]\n",
+    "print(image_nodestats_stats_grain1_node1.keys())\n",
+    "image_nodestats_stats_grain1_node1_coords = image_nodestats_stats_grain1_node1[\"node_coords\"]\n",
+    "print(image_nodestats_stats_grain1_node1_coords)\n",
+    "image_nodestats_stats_grain1_node1_branch_stats = image_nodestats_stats_grain1_node1[\"branch_stats\"]\n",
+    "print(image_nodestats_stats_grain1_node1_branch_stats.keys())\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats = image_nodestats_stats_grain1_node1[\"unmatched_branch_stats\"]\n",
+    "print(image_nodestats_stats_grain1_node1_unmatched_branch_stats.keys())\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_0 = image_nodestats_stats_grain1_node1_unmatched_branch_stats[\"0\"]\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_1 = image_nodestats_stats_grain1_node1_unmatched_branch_stats[\"1\"]\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_2 = image_nodestats_stats_grain1_node1_unmatched_branch_stats[\"2\"]\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_3 = image_nodestats_stats_grain1_node1_unmatched_branch_stats[\"3\"]\n",
+    "print(image_nodestats_stats_grain1_node1_unmatched_branch_stats_0.keys())\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_0_angles = image_nodestats_stats_grain1_node1_unmatched_branch_stats_0[\"angles\"]\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_1_angles = image_nodestats_stats_grain1_node1_unmatched_branch_stats_1[\"angles\"]\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_2_angles = image_nodestats_stats_grain1_node1_unmatched_branch_stats_2[\"angles\"]\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_3_angles = image_nodestats_stats_grain1_node1_unmatched_branch_stats_3[\"angles\"]\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_0_vector = image_nodestats_stats_grain1_node1_unmatched_branch_stats_0[\"vector\"]\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_1_vector = image_nodestats_stats_grain1_node1_unmatched_branch_stats_1[\"vector\"]\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_2_vector = image_nodestats_stats_grain1_node1_unmatched_branch_stats_2[\"vector\"]\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_3_vector = image_nodestats_stats_grain1_node1_unmatched_branch_stats_3[\"vector\"]\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_0_start_coords = image_nodestats_stats_grain1_node1_unmatched_branch_stats_0[\"start_coords\"]\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_1_start_coords = image_nodestats_stats_grain1_node1_unmatched_branch_stats_1[\"start_coords\"]\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_2_start_coords = image_nodestats_stats_grain1_node1_unmatched_branch_stats_2[\"start_coords\"]\n",
+    "image_nodestats_stats_grain1_node1_unmatched_branch_stats_3_start_coords = image_nodestats_stats_grain1_node1_unmatched_branch_stats_3[\"start_coords\"]\n",
+    "print(\"-- unmatched branch angles --\")\n",
+    "print(image_nodestats_stats_grain1_node1_unmatched_branch_stats_0_angles)\n",
+    "print(image_nodestats_stats_grain1_node1_unmatched_branch_stats_1_angles)\n",
+    "print(image_nodestats_stats_grain1_node1_unmatched_branch_stats_2_angles)\n",
+    "print(image_nodestats_stats_grain1_node1_unmatched_branch_stats_3_angles)\n",
+    "print(\"---\")\n",
+    "print(\"-- unmatched branch vectors --\")\n",
+    "print(image_nodestats_stats_grain1_node1_unmatched_branch_stats_0_vector)\n",
+    "print(image_nodestats_stats_grain1_node1_unmatched_branch_stats_1_vector)\n",
+    "print(image_nodestats_stats_grain1_node1_unmatched_branch_stats_2_vector)\n",
+    "print(image_nodestats_stats_grain1_node1_unmatched_branch_stats_3_vector)\n",
+    "print(\"---\")\n",
+    "print(\"-- unmatched branch start coords --\")\n",
+    "print(image_nodestats_stats_grain1_node1_unmatched_branch_stats_0_start_coords)\n",
+    "print(image_nodestats_stats_grain1_node1_unmatched_branch_stats_1_start_coords)\n",
+    "print(image_nodestats_stats_grain1_node1_unmatched_branch_stats_2_start_coords)\n",
+    "print(image_nodestats_stats_grain1_node1_unmatched_branch_stats_3_start_coords)\n",
+    "print(\"---\")\n",
+    "image_nodestats_stats_grain1_node1_branch_stats_0 = image_nodestats_stats_grain1_node1_branch_stats[\"0\"]\n",
+    "image_nodestats_stats_grain1_node1_branch_stats_1 = image_nodestats_stats_grain1_node1_branch_stats[\"1\"]\n",
+    "print(image_nodestats_stats_grain1_node1_branch_stats_0.keys())\n",
+    "image_nodestats_stats_grain1_node1_branch_stats_0_angles = image_nodestats_stats_grain1_node1_branch_stats_0[\"angles\"]\n",
+    "print(image_nodestats_stats_grain1_node1_branch_stats_0_angles)\n",
+    "image_nodestats_stats_grain1_node1_branch_stats_0_ordered_coords = image_nodestats_stats_grain1_node1_branch_stats_0[\"ordered_coords\"]\n",
+    "image_nodestats_stats_grain1_node1_branch_stats_1_ordered_coords = image_nodestats_stats_grain1_node1_branch_stats_1[\"ordered_coords\"]\n",
+    "\n",
+    "# get a coord for the centre of the node\n",
+    "node_centre = np.mean(image_nodestats_stats_grain1_node1_coords, axis=0)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(20, 20))\n",
+    "square_markersize = 3.8\n",
+    "plt.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "unmatched_branch_colour = \"#555555\"\n",
+    "plt.plot(image_nodestats_stats_grain1_node1_branch_stats_0_ordered_coords[:, 1], image_nodestats_stats_grain1_node1_branch_stats_0_ordered_coords[:, 0], color=unmatched_branch_colour, alpha=1, marker=\"s\", markersize=square_markersize)\n",
+    "plt.plot(image_nodestats_stats_grain1_node1_branch_stats_1_ordered_coords[:, 1], image_nodestats_stats_grain1_node1_branch_stats_1_ordered_coords[:, 0], color=unmatched_branch_colour, alpha=1, marker=\"s\", markersize=square_markersize)\n",
+    "# plot the vectors\n",
+    "branch_1_color = \"orange\"\n",
+    "branch_2_color = \"cornflowerblue\"\n",
+    "line_width = 2\n",
+    "line_scale = 3\n",
+    "line_alpha = 1\n",
+    "arrow_head_width = 2\n",
+    "arrow_head_length = 2\n",
+    "zorder = 10  # make sure arrows appear over the lines\n",
+    "plt.arrow(\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_0_start_coords[1],\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_0_start_coords[0],\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_0_vector[1] * line_scale,\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_0_vector[0] * line_scale,\n",
+    "    color=branch_1_color,\n",
+    "    linewidth=line_width,\n",
+    "    alpha=line_alpha,\n",
+    "    head_width=arrow_head_width,\n",
+    "    head_length=arrow_head_length,\n",
+    "    zorder=zorder,\n",
+    ")\n",
+    "plt.arrow(\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_1_start_coords[1],\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_1_start_coords[0],\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_1_vector[1] * line_scale,\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_1_vector[0] * line_scale,\n",
+    "    color=branch_2_color,\n",
+    "    linewidth=line_width,\n",
+    "    alpha=line_alpha,\n",
+    "    head_width=arrow_head_width,\n",
+    "    head_length=arrow_head_length,\n",
+    "    zorder=zorder,\n",
+    ")\n",
+    "plt.arrow(\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_2_start_coords[1],\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_2_start_coords[0],\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_2_vector[1] * line_scale,\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_2_vector[0] * line_scale,\n",
+    "    color=branch_2_color,\n",
+    "    linewidth=line_width,\n",
+    "    alpha=line_alpha,\n",
+    "    head_width=arrow_head_width,\n",
+    "    head_length=arrow_head_length,\n",
+    "    zorder=zorder,\n",
+    ")\n",
+    "plt.arrow(\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_3_start_coords[1],\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_3_start_coords[0],\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_3_vector[1] * line_scale,\n",
+    "    image_nodestats_stats_grain1_node1_unmatched_branch_stats_3_vector[0] * line_scale,\n",
+    "    color=branch_1_color,\n",
+    "    linewidth=line_width,\n",
+    "    alpha=line_alpha,\n",
+    "    head_width=arrow_head_width,\n",
+    "    head_length=arrow_head_length,\n",
+    "    zorder=zorder,\n",
+    ")\n",
+    "# plot node coords\n",
+    "node_coord_colour = \"#EEEEEE\"\n",
+    "plt.plot(image_nodestats_stats_grain1_node1_coords[:, 1], image_nodestats_stats_grain1_node1_coords[:, 0], color=node_coord_colour, marker=\"s\", markersize=square_markersize)\n",
+    "plt.savefig(figure_dir / \"i19-fig-nodestats-node1-branch-vectors.png\")\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "# plot the branches \n",
+    "plt.plot(image_nodestats_stats_grain1_node1_branch_stats_0_ordered_coords[:, 1], image_nodestats_stats_grain1_node1_branch_stats_0_ordered_coords[:, 0], color=branch_1_color, alpha=1, marker=\"s\", markersize=square_markersize)\n",
+    "plt.plot(image_nodestats_stats_grain1_node1_branch_stats_1_ordered_coords[:, 1], image_nodestats_stats_grain1_node1_branch_stats_1_ordered_coords[:, 0], color=branch_2_color, alpha=1, marker=\"s\", markersize=square_markersize)\n",
+    "# plot node coords\n",
+    "plt.plot(image_nodestats_stats_grain1_node1_coords[:, 1], image_nodestats_stats_grain1_node1_coords[:, 0], color=node_coord_colour, marker=\"s\", markersize=square_markersize)\n",
+    "plt.savefig(figure_dir / \"i19-fig-nodestats-node1-ordered-branches.png\")\n"
    ]
   }
  ],
