improve plotting of fwhm and change to node 2

--- a/fig-nodestats.ipynb
+++ b/fig-nodestats.ipynb
@@ -18,7 +18,7 @@
     "colormap = Colormap()\n",
     "cmap = colormap.get_cmap()\n",
     "vmin = -3\n",
-    "vmax = 5"
+    "vmax = 4"
    ]
   },
   {
@@ -63,7 +63,7 @@
     "image_nodestats_stats = image_nodestats[\"stats\"]\n",
     "image_nodestats_stats_grain1 = image_nodestats_stats[\"grain_1\"]\n",
     "print(image_nodestats_stats_grain1.keys())\n",
-    "image_nodestats_stats_grain1_node1 = image_nodestats_stats_grain1[\"node_1\"]\n",
+    "image_nodestats_stats_grain1_node1 = image_nodestats_stats_grain1[\"node_2\"]\n",
     "print(image_nodestats_stats_grain1_node1.keys())\n",
     "image_nodestats_stats_grain1_node1_coords = image_nodestats_stats_grain1_node1[\"node_coords\"]\n",
     "print(image_nodestats_stats_grain1_node1_coords)\n",
@@ -154,8 +154,27 @@
     "]\n",
     "\n",
     "# get a coord for the centre of the node\n",
-    "node_centre = np.mean(image_nodestats_stats_grain1_node1_coords, axis=0)\n",
-    "\n",
+    "node_centre = np.mean(image_nodestats_stats_grain1_node1_coords, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ea600e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# skeleton convolution figure\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90621d8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# branch pairing figure\n",
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "square_markersize = 3.8\n",
     "plt.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
@@ -242,7 +261,7 @@
     "    marker=\"s\",\n",
     "    markersize=square_markersize,\n",
     ")\n",
-    "plt.savefig(figure_dir / \"i19-fig-nodestats-node1-branch-vectors.png\")\n",
+    "plt.savefig(figure_dir / \"i19-fig-nodestats-node2-branch-vectors.png\")\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "plt.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
@@ -271,7 +290,7 @@
     "    marker=\"s\",\n",
     "    markersize=square_markersize,\n",
     ")\n",
-    "plt.savefig(figure_dir / \"i19-fig-nodestats-node1-ordered-branches.png\")"
+    "plt.savefig(figure_dir / \"i19-fig-nodestats-node2-ordered-branches.png\")"
    ]
   },
   {
@@ -428,8 +447,9 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
     "fwhm_plot_linestyle = \"-\"\n",
-    "fwhm_plot_linewidth = 3\n",
+    "fwhm_plot_linewidth = 5\n",
     "fwhm_plot_marker = \"\"\n",
+    "fwhm_plot_alpha = 0.5\n",
     "plt.plot(\n",
     "    image_nodestats_stats_grain1_node2_branch_stats_0_distances,\n",
     "    image_nodestats_stats_grain1_node2_branch_stats_0_heights,\n",
@@ -438,6 +458,7 @@
     "    linestyle=fwhm_plot_linestyle,\n",
     "    linewidth=fwhm_plot_linewidth,\n",
     "    color=branch_2_color,\n",
+    "    alpha=fwhm_plot_alpha,\n",
     ")\n",
     "plt.plot(\n",
     "    image_nodestats_stats_grain1_node2_branch_stats_1_distances,\n",
@@ -447,27 +468,34 @@
     "    linestyle=fwhm_plot_linestyle,\n",
     "    linewidth=fwhm_plot_linewidth,\n",
     "    color=branch_1_color,\n",
+    "    alpha=fwhm_plot_alpha,\n",
     ")\n",
     "fwhm_plot_tick_fontsize = 30\n",
     "fwhm_plot_axlabel_fontsize = 35\n",
-    "fwhm_plot_fwhm_linewidth = 4\n",
-    "fwhm_plot_fwhm_markersize = 40\n",
-    "fwhm_plot_fwhm_alpha = 1\n",
-    "fwhm_plot_fwhm_marker = \"|\"\n",
+    "fwhm_plot_fwhm_linewidth = 6\n",
+    "fwhm_plot_fwhm_markersize = 20\n",
+    "fwhm_plot_fwhm_alpha = 0.8\n",
+    "fwhm_plot_fwhm_marker = \"o\"\n",
     "fwhm_plot_fwhm_linestyle = \"-\"\n",
     "plt.plot(\n",
-    "    image_nodestats_stats_grain1_node2_branch_stats_0_fwhm[\"half_maxs\"],\n",
-    "    [2.32] * 3,\n",
+    "    [\n",
+    "        image_nodestats_stats_grain1_node2_branch_stats_0_fwhm[\"half_maxs\"][0],\n",
+    "        image_nodestats_stats_grain1_node2_branch_stats_0_fwhm[\"half_maxs\"][1],\n",
+    "    ],\n",
+    "    [2.32] * 2,\n",
     "    marker=fwhm_plot_fwhm_marker,\n",
     "    alpha=fwhm_plot_fwhm_alpha,\n",
-    "    linewidth=fwhm_plot_fwhm_linewidth*2,\n",
+    "    linewidth=fwhm_plot_fwhm_linewidth * 2.5,\n",
     "    markersize=fwhm_plot_fwhm_markersize,\n",
     "    linestyle=fwhm_plot_fwhm_linestyle,\n",
     "    color=branch_2_color,\n",
     ")\n",
     "plt.plot(\n",
-    "    image_nodestats_stats_grain1_node2_branch_stats_1_fwhm[\"half_maxs\"],\n",
-    "    [2.32] * 3,\n",
+    "    [\n",
+    "        image_nodestats_stats_grain1_node2_branch_stats_1_fwhm[\"half_maxs\"][0],\n",
+    "        image_nodestats_stats_grain1_node2_branch_stats_1_fwhm[\"half_maxs\"][1],\n",
+    "    ],\n",
+    "    [2.32] * 2,\n",
     "    marker=fwhm_plot_fwhm_marker,\n",
     "    alpha=fwhm_plot_fwhm_alpha,\n",
     "    linewidth=fwhm_plot_fwhm_linewidth,\n",
@@ -480,9 +508,12 @@
     "plt.xticks(fontsize=fwhm_plot_tick_fontsize)\n",
     "plt.yticks(fontsize=fwhm_plot_tick_fontsize)\n",
     "plt.locator_params(nbins=5)\n",
+    "# thicken axes borders\n",
+    "for axis in [\"top\", \"bottom\", \"left\", \"right\"]:\n",
+    "    ax.spines[axis].set_linewidth(2)\n",
     "# plt.legend(fontsize=25)\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.savefig(figure_dir / \"i19-fig-nodestats-node2-branch-fwhm.png\")"
    ]
   }
  ],
