save ordered tracing cats image

--- a/fig-ordered-tracing.ipynb
+++ b/fig-ordered-tracing.ipynb
@@ -94,7 +94,28 @@
    "outputs": [],
    "source": [
     "# colouring by molecule\n",
-    "mol_0_ordered_coords = image_ordered_tracing[\"grain_1\"][\"mol_0\"][\"ordered_coords\"]\n"
+    "cat_data_file = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/cats-images/output_fig_ordered_tracing_multi_molecule/processed/420231218_2ngSCcats.0_00179.topostats\")\n",
+    "\n",
+    "loadscans = LoadScans(img_paths=[cat_data_file], channel=\"dummy\")\n",
+    "loadscans.get_data()\n",
+    "loadscans_dict = loadscans.img_dict\n",
+    "\n",
+    "cat_topleft = (0, 103)\n",
+    "\n",
+    "cat_image_dict = loadscans_dict[list(loadscans_dict.keys())[0]]\n",
+    "\n",
+    "cat_image = cat_image_dict[\"image\"]\n",
+    "cat_ordered_tracing = cat_image_dict[\"ordered_traces\"][\"above\"]\n",
+    "\n",
+    "cat_ordered_coords_mol0 = cat_ordered_tracing[\"grain_0\"][\"mol_0\"][\"ordered_coords\"] + cat_topleft\n",
+    "cat_ordered_coords_mol1 = cat_ordered_tracing[\"grain_0\"][\"mol_1\"][\"ordered_coords\"] + cat_topleft\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "ax.imshow(cat_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "ax.plot(cat_ordered_coords_mol0[:, 1], cat_ordered_coords_mol0[:, 0], color=\"#2578B1\")\n",
+    "ax.plot(cat_ordered_coords_mol1[:, 1], cat_ordered_coords_mol1[:, 0], color=\"#27B125\")\n",
+    "plt.savefig(figure_dir / f\"fig-ordered-tracing-molecules-cats-image\", bbox_inches=\"tight\")\n"
    ]
   }
  ],
