--- a/fig-dataset-topology-sc-nicked-catsnet-segmented.ipynb
+++ b/fig-dataset-topology-sc-nicked-catsnet-segmented.ipynb
@@ -11,7 +11,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "from topostats.io import LoadScans"
    ]
   },
   {
@@ -24,6 +26,10 @@
     "base_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/topology-plasmids\")\n",
     "results_dir = base_dir / \"output_old_catsnet\"\n",
     "assert results_dir.exists()\n",
+    "dir_processed_nicked = results_dir / \"plasmid_nic/processed\"\n",
+    "assert dir_processed_nicked.exists()\n",
+    "dir_processed_sc = results_dir / \"plasmid_sup/processed\"\n",
+    "assert dir_processed_sc.exists()\n",
     "\n",
     "file_allstats = results_dir / \"all_statistics.csv\"\n",
     "assert file_allstats.exists()\n",
@@ -33,6 +39,7 @@
     "# convert to nm\n",
     "df_allstats[\"area\"] = df_allstats[\"area\"] * 1e18\n",
     "df_allstats[\"total_contour_length\"] = df_allstats[\"total_contour_length\"] * 1e9\n",
+    "df_allstats[\"volume\"] = df_allstats[\"volume\"] * 1e27\n",
     "\n",
     "# print the writhe_string column unique values\n",
     "print(df_allstats[\"writhe_string\"].unique())\n",
@@ -68,7 +75,117 @@
     "plt.ylabel(\"Number of crossings\")\n",
     "plt.show()\n",
     "\n",
-    "#"
+    "# volume\n",
+    "sns.violinplot(data=df_allstats, x=\"basename\", y=\"volume\", inner=\"point\")\n",
+    "plt.ylabel(\"Volume (nm^3)\")\n",
+    "plt.show()\n",
+    "\n",
+    "# height min\n",
+    "sns.violinplot(data=df_allstats, x=\"basename\", y=\"height_min\", inner=\"point\")\n",
+    "plt.ylabel(\"Minimum Height (nm)\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc2c707e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grab the files for the sc and nic processed data\n",
+    "files_ts_nic = list(sorted(dir_processed_nicked.glob(\"*.topostats\")))\n",
+    "print(f\"Found {len(files_ts_nic)} processed files for nicked plasmids\")\n",
+    "files_ts_sc = list(sorted(dir_processed_sc.glob(\"*.topostats\")))\n",
+    "print(f\"Found {len(files_ts_sc)} processed files for supercoiled plasmids\")\n",
+    "\n",
+    "loadscans_nic = LoadScans(img_paths=files_ts_nic, channel=\"dummy\")\n",
+    "loadscans_nic.get_data()\n",
+    "loadscans_dicts_nic = loadscans_nic.img_dict\n",
+    "loadscans_sc = LoadScans(img_paths=files_ts_sc, channel=\"dummy\")\n",
+    "loadscans_sc.get_data()\n",
+    "loadscans_dicts_sc = loadscans_sc.img_dict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6ec3702",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for image_name, image_data in loadscans_dicts_nic.items():\n",
+    "    image_data[\"sample_type\"] = \"nicked\"\n",
+    "for image_name, image_data in loadscans_dicts_sc.items():\n",
+    "    image_data[\"sample_type\"] = \"supercoiled\"\n",
+    "\n",
+    "# combine the dicts\n",
+    "loadscans_dicts = {**loadscans_dicts_nic, **loadscans_dicts_sc}\n",
+    "\n",
+    "print(f\"num loaded images: {len(loadscans_dicts)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7e948aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_curvature_list = []\n",
+    "for image_name, image_data in loadscans_dicts.items():\n",
+    "    sample_type = image_data[\"sample_type\"]\n",
+    "    if \"grain_curvature_stats\" not in image_data:\n",
+    "        print(f\"No grain curvature data for {image_name}\")\n",
+    "        continue\n",
+    "    curvature_data = image_data[\"grain_curvature_stats\"][\"above\"]\n",
+    "    for grain_id, grain_curvature_data in curvature_data.items():\n",
+    "        for mol_id, mol_curvatures in grain_curvature_data.items():\n",
+    "            # print(grain_id, mol_id)\n",
+    "            min_curvature = np.min(mol_curvatures)\n",
+    "            max_curvature = np.max(mol_curvatures)\n",
+    "            mean_curvature = np.mean(mol_curvatures)\n",
+    "            std_curvature = np.std(mol_curvatures)\n",
+    "            percentile_25_curvature = np.percentile(mol_curvatures, 25)\n",
+    "            percentile_75_curvature = np.percentile(mol_curvatures, 75)\n",
+    "            percentile_iqr_curvature = percentile_75_curvature - percentile_25_curvature\n",
+    "            stats_curvature_list.append(\n",
+    "                {\n",
+    "                    \"image_name\": image_name,\n",
+    "                    \"sample_type\": sample_type,\n",
+    "                    \"grain_id\": grain_id,\n",
+    "                    \"mol_id\": mol_id,\n",
+    "                    \"min_curvature\": min_curvature,\n",
+    "                    \"max_curvature\": max_curvature,\n",
+    "                    \"mean_curvature\": mean_curvature,\n",
+    "                    \"std_curvature\": std_curvature,\n",
+    "                    \"percentile_25_curvature\": percentile_25_curvature,\n",
+    "                    \"percentile_75_curvature\": percentile_75_curvature,\n",
+    "                    \"percentile_iqr_curvature\": percentile_iqr_curvature,\n",
+    "                }\n",
+    "            )\n",
+    "\n",
+    "df_stats_curvature = pd.DataFrame(stats_curvature_list)\n",
+    "# plot min curvature based on sample type\n",
+    "sns.violinplot(data=df_stats_curvature, x=\"sample_type\", y=\"min_curvature\", inner=\"point\")\n",
+    "plt.ylabel(\"Minimum Curvature (1/nm)\")\n",
+    "plt.show()\n",
+    "# plot max curvature based on sample type\n",
+    "sns.violinplot(data=df_stats_curvature, x=\"sample_type\", y=\"max_curvature\", inner=\"point\")\n",
+    "plt.ylabel(\"Maximum Curvature (1/nm)\")\n",
+    "plt.show()\n",
+    "# plot mean curvature based on sample type\n",
+    "sns.violinplot(data=df_stats_curvature, x=\"sample_type\", y=\"mean_curvature\", inner=\"point\")\n",
+    "plt.ylabel(\"Mean Curvature (1/nm)\")\n",
+    "plt.show()\n",
+    "# plot std curvature based on sample type\n",
+    "sns.violinplot(data=df_stats_curvature, x=\"sample_type\", y=\"std_curvature\", inner=\"point\")\n",
+    "plt.ylabel(\"Standard Deviation of Curvature (1/nm)\")\n",
+    "plt.show()\n",
+    "# plot iqr curvature based on sample type\n",
+    "sns.violinplot(data=df_stats_curvature, x=\"sample_type\", y=\"percentile_iqr_curvature\", inner=\"point\")\n",
+    "plt.ylabel(\"Interquartile Range of Curvature (1/nm)\")\n",
+    "plt.show()\n"
    ]
   }
  ],
