--- a/fig-dataset-topology-sc-nicked-catsnet-segmented.ipynb
+++ b/fig-dataset-topology-sc-nicked-catsnet-segmented.ipynb
@@ -53,6 +53,16 @@
     "    return input_string.count(character)\n",
     "\n",
     "\n",
+    "def remove_datapoints_outside_n_std(df: pd.DataFrame, column: str, n_std: float) -> pd.DataFrame:\n",
+    "    \"\"\"Remove datapoints outside n standard deviations from the mean.\"\"\"\n",
+    "    mean = df[column].mean()\n",
+    "    std = df[column].std()\n",
+    "    lower_bound = mean - n_std * std\n",
+    "    upper_bound = mean + n_std * std\n",
+    "    df_filtered = df[(df[column] >= lower_bound) & (df[column] <= upper_bound)]\n",
+    "    return df_filtered\n",
+    "\n",
+    "\n",
     "df_allstats[\"num_plusses\"] = df_allstats[\"writhe_string\"].apply(calculate_num_char_in_string, character=\"+\")\n",
     "df_allstats[\"num_minuses\"] = df_allstats[\"writhe_string\"].apply(calculate_num_char_in_string, character=\"-\")\n",
     "df_allstats[\"num_plusses_or_minuses\"] = df_allstats[\"num_plusses\"] + df_allstats[\"num_minuses\"]"
@@ -66,23 +76,32 @@
    "outputs": [],
    "source": [
     "# plot violin of length based on basename\n",
-    "sns.violinplot(data=df_allstats, x=\"basename\", y=\"total_contour_length\", inner=\"point\")\n",
+    "sns.violinplot(data=remove_datapoints_outside_n_std(df_allstats, column=\"total_contour_length\", n_std=3), x=\"basename\", y=\"total_contour_length\", inner=\"point\")\n",
     "plt.ylabel(\"Contour Length (nm)\")\n",
     "plt.show()\n",
     "\n",
     "# plot num of plusses or minuses based on basename\n",
-    "sns.violinplot(data=df_allstats, x=\"basename\", y=\"num_plusses_or_minuses\", inner=\"point\")\n",
+    "sns.violinplot(data=remove_datapoints_outside_n_std(df_allstats, column=\"num_plusses_or_minuses\", n_std=3), x=\"basename\", y=\"num_plusses_or_minuses\", inner=\"point\")\n",
     "plt.ylabel(\"Number of crossings\")\n",
     "plt.show()\n",
     "\n",
     "# volume\n",
-    "sns.violinplot(data=df_allstats, x=\"basename\", y=\"volume\", inner=\"point\")\n",
+    "sns.violinplot(data=remove_datapoints_outside_n_std(df_allstats, column=\"volume\", n_std=3), x=\"basename\", y=\"volume\", inner=\"point\")\n",
     "plt.ylabel(\"Volume (nm^3)\")\n",
     "plt.show()\n",
     "\n",
     "# height min\n",
-    "sns.violinplot(data=df_allstats, x=\"basename\", y=\"height_min\", inner=\"point\")\n",
+    "sns.violinplot(data=remove_datapoints_outside_n_std(df_allstats, column=\"height_min\", n_std=3), x=\"basename\", y=\"height_min\", inner=\"point\")\n",
     "plt.ylabel(\"Minimum Height (nm)\")\n",
+    "plt.show()\n",
+    "\n",
+    "# height median\n",
+    "sns.violinplot(data=remove_datapoints_outside_n_std(df_allstats, column=\"height_median\", n_std=3), x=\"basename\", y=\"height_median\", inner=\"point\")\n",
+    "plt.ylabel(\"Median Height (nm)\")\n",
+    "plt.show()\n",
+    "# height mean\n",
+    "sns.violinplot(data=remove_datapoints_outside_n_std(df_allstats, column=\"height_mean\", n_std=3), x=\"basename\", y=\"height_mean\", inner=\"point\")\n",
+    "plt.ylabel(\"Mean Height (nm)\")\n",
     "plt.show()"
    ]
   },
@@ -162,29 +181,34 @@
     "                    \"percentile_25_curvature\": percentile_25_curvature,\n",
     "                    \"percentile_75_curvature\": percentile_75_curvature,\n",
     "                    \"percentile_iqr_curvature\": percentile_iqr_curvature,\n",
+    "                    \"total_curvature\": np.sum(mol_curvatures)\n",
     "                }\n",
     "            )\n",
     "\n",
     "df_stats_curvature = pd.DataFrame(stats_curvature_list)\n",
     "# plot min curvature based on sample type\n",
-    "sns.violinplot(data=df_stats_curvature, x=\"sample_type\", y=\"min_curvature\", inner=\"point\")\n",
+    "sns.violinplot(data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"min_curvature\", n_std=3), x=\"sample_type\", y=\"min_curvature\", inner=\"point\")\n",
     "plt.ylabel(\"Minimum Curvature (1/nm)\")\n",
     "plt.show()\n",
     "# plot max curvature based on sample type\n",
-    "sns.violinplot(data=df_stats_curvature, x=\"sample_type\", y=\"max_curvature\", inner=\"point\")\n",
+    "sns.violinplot(data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"max_curvature\", n_std=3), x=\"sample_type\", y=\"max_curvature\", inner=\"point\")\n",
     "plt.ylabel(\"Maximum Curvature (1/nm)\")\n",
     "plt.show()\n",
     "# plot mean curvature based on sample type\n",
-    "sns.violinplot(data=df_stats_curvature, x=\"sample_type\", y=\"mean_curvature\", inner=\"point\")\n",
+    "sns.violinplot(data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"mean_curvature\", n_std=3), x=\"sample_type\", y=\"mean_curvature\", inner=\"point\")\n",
     "plt.ylabel(\"Mean Curvature (1/nm)\")\n",
     "plt.show()\n",
     "# plot std curvature based on sample type\n",
-    "sns.violinplot(data=df_stats_curvature, x=\"sample_type\", y=\"std_curvature\", inner=\"point\")\n",
+    "sns.violinplot(data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"std_curvature\", n_std=3), x=\"sample_type\", y=\"std_curvature\", inner=\"point\")\n",
     "plt.ylabel(\"Standard Deviation of Curvature (1/nm)\")\n",
     "plt.show()\n",
     "# plot iqr curvature based on sample type\n",
-    "sns.violinplot(data=df_stats_curvature, x=\"sample_type\", y=\"percentile_iqr_curvature\", inner=\"point\")\n",
+    "sns.violinplot(data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"percentile_iqr_curvature\", n_std=3), x=\"sample_type\", y=\"percentile_iqr_curvature\", inner=\"point\")\n",
     "plt.ylabel(\"Interquartile Range of Curvature (1/nm)\")\n",
+    "plt.show()\n",
+    "# plot total curvature based on sample type\n",
+    "sns.violinplot(data=remove_datapoints_outside_n_std(df_stats_curvature, column=\"total_curvature\", n_std=3), x=\"sample_type\", y=\"total_curvature\", inner=\"point\")\n",
+    "plt.ylabel(\"Total Curvature (1/nm)\")\n",
     "plt.show()\n"
    ]
   }
